# pre-commit-lint

./: .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py
pre_commit_hooks/: __init__.py  commit-lint.py
