[metadata]
name = pre_commit_hooks
version = 4.0.1
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/pre-commit-hooks
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    toml
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    file-contents-sorter = pre_commit_hooks.file_contents_sorter:main
    fix-byte-order-marker = pre_commit_hooks.fix_byte_order_marker:main
    fix-encoding-pragma = pre_commit_hooks.fix_encoding_pragma:main
    forbid-new-submodules = pre_commit_hooks.forbid_new_submodules:main
    mixed-line-ending = pre_commit_hooks.mixed_line_ending:main
    name-tests-test = pre_commit_hooks.tests_should_end_in_test:main
    no-commit-to-branch = pre_commit_hooks.no_commit_to_branch:main
    pre-commit-hooks-removed = pre_commit_hooks.removed:main
    pretty-format-json = pre_commit_hooks.pretty_format_json:main
    requirements-txt-fixer = pre_commit_hooks.requirements_txt_fixer:main
    sort-simple-yaml = pre_commit_hooks.sort_simple_yaml:main
    trailing-whitespace-fixer = pre_commit_hooks.trailing_whitespace_fixer:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
